# oncoschool-team-portal

./: .gitignore  .workflow-state.json  CHANGELOG.md  CLAUDE.md  Dockerfile.railway  Makefile  README.md  docker-compose.yml  railway.toml  skills-lock.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/scripts/: __init__.py  cf_smoke_test.py
backend/tests/: test_activity_feed_rbac.py  test_activity_models.py  test_activity_new_event_types.py  test_activity_reactions.py  test_activity_serialize_recognition.py  test_activity_service_record.py  test_admin_content_access.py  test_ai_provider_max_tokens.py  test_analysis_service.py  test_api_activity.py  test_api_close_candidates.py  test_api_kudos.py  test_api_pulse_settings.py  test_api_task_bulk.py  test_api_task_cancellation.py  test_auth_me_content_factory.py  test_backfill_progress_callback.py  test_broadcast_message_normalization.py  test_cf_bundle_service.py  test_cf_guest_story_service.py  test_cf_metric_source_service.py  test_cf_publication_service.py  test_cf_publishing_scheduler_service.py  test_cf_seed.py  test_cf_segment_metric_retro_services.py  test_cf_vk_metric_collector_service.py  test_cf_vk_publisher_service.py  test_content_cleanup_service.py  test_content_factory_bundles_api.py  test_content_factory_guest_stories_api.py  test_content_factory_guest_story_migration.py  test_content_factory_metric_sources_api.py  test_content_factory_metrics_api.py  test_content_factory_models.py  test_content_factory_permissions.py  (+54 more)
(+483 files in other folders)
